--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,22 +1,25 @@
+/** Global & Util Styles **/
 body,
 html {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     max-width: 1200px;
     margin: 0 auto;
 }
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-    font-size: 2em;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 2em "Montserrat", sans-serif;
     color: #2d3c49;
 }
+
 a {
     color: #02b3e4;
 }
+
 /** Top Nav Bar **/
 .top-nav {
     display: -ms-flexbox;
@@ -26,15 +29,18 @@ a {
     -moz-flex-direction: row;
     flex-direction: row;
     max-width: 1200px;
+
     .logo {
         -webkit-flex: 2;
         -moz-flex: 2;
         flex: 2;
+
         .logo-img {
             margin-left: 1em;
             max-width: 125px;
         }
     }
+
     .nav-title {
         -webkit-flex: 8;
         -moz-flex: 8;
@@ -42,31 +48,36 @@ a {
         position: relative;
         text-align: right;
         margin: 0;
+
         h1,
         h4 {
             position: absolute;
             right: 0;
             margin: 0;
         }
+
         h1 {
             font-size: 4em;
             font-weight: 400;
             bottom: 0.25em;
         }
+
         h4 {
-            font-family: 'Open Sans', sans-serif;
+            font-family: "Open Sans", sans-serif;
             bottom: 0;
             font-weight: 100;
             font-size: 24px;
         }
     }
 }
+
 hr {
     border: 0;
     border-bottom: 2px solid #7d97ad;
     background: #999;
     max-width: 100%;
 }
+
 /** Main Content **/
 .main-content {
     display: -ms-flexbox;
@@ -78,11 +89,13 @@ hr {
     max-width: 1200px;
     margin: 0 auto;
 }
+
 /** Hero **/
 .hero {
     -webkit-flex: 1;
     -moz-flex: 1;
     flex: 1;
+
     .hero-img {
         box-sizing: border-box;
         margin: 0 auto;
@@ -92,6 +105,7 @@ hr {
         border-radius: .25em;
     }
 }
+
 /** Featured **/
 .featured {
     display: -ms-flexbox;
@@ -100,9 +114,11 @@ hr {
     -webkit-flex-direction: row;
     -moz-flex-direction: row;
     flex-direction: row;
-    margin: 0;
+    margin: 0 auto;
     flex-wrap: wrap;
+
     .featured-header {
+
         h2 {
             color: #2d3c49;
             -webkit-box-shadow: 0 8px 6px -6px #2d3c49;
@@ -110,6 +126,7 @@ hr {
             box-shadow: 0 8px 6px -6px #2d3c49;
         }
     }
+
     .features {
         width: 100%;
         display: -ms-flexbox;
@@ -120,13 +137,17 @@ hr {
         flex-direction: row;
         flex-wrap: wrap;
         margin: 0;
+
         .feature {
-            margin: 0 1em;
+            margin: 0;
+            padding: 0 1em;
             -webkit-flex: 1;
             -moz-flex: 1;
             flex: 1;
             text-align: center;
+
             .feature-img > img {
+                box-sizing: border-box;
                 border: 2px solid #7d97ad;
                 border-radius: 1em;
                 height: 250px;
@@ -134,12 +155,14 @@ hr {
                 min-width: 325px;
                 max-width: 500px;
             }
+
             .feature-info {
+
                 h3 {
                     -webkit-box-shadow: 0 8px 6px -6px #2d3c49;
                     -moz-box-shadow: 0 8px 6px -6px #2d3c49;
                     box-shadow: 0 8px 6px -6px #2d3c49;
-                    font-family: 'Open Sans', sans-serif;
+                    font-family: "Open Sans", sans-serif;
                     margin: 0 auto;
                     font-size: 2em;
                     font-weight: 400;
@@ -148,6 +171,7 @@ hr {
         }
     }
 }
+
 /** Mobile layout **/
 @media screen and (max-width: 768px) {
     .top-nav {
@@ -157,46 +181,30 @@ hr {
         -webkit-flex-direction: column;
         -moz-flex-direction: column;
         flex-direction: column;
+
         .logo {
-            display: none;
+            margin: 0 auto;
         }
+
         .nav-title {
             text-align: center;
+
             h1,
             h4 {
                 position: relative;
             }
+
             h1 {
+                font-size: 2.5em;
                 margin-top: 0.25em;
-                -webkit-order: 0;
-                -moz-order: 0;
-                order: 0;
             }
+
             h4 {
-                -webkit-order: 1;
-                -moz-order: 1;
-                order: 1;
+                width: 100%;
+                font-size: 1.25em;
             }
         }
     }
-    .featured {
-        .featured-header {
-            margin:0 auto;
-            font-size: 1.5em;
-        }
-        .features {
-            .feature {
-                .feature-info {
-                    h3 {
-                        box-shadow: none;
-                    }
-                }
-            }
-        }
-    }
-}
-/** Tablet layout **/
-@media screen and (min-width: 768px) and (max-width: 1024px) {
     .featured {
         .featured-header {
             margin: 0 auto;
@@ -208,6 +216,27 @@ hr {
                     h3 {
                         box-shadow: none;
                     }
+                }
+            }
+        }
+    }
+}
+
+/** Tablet layout **/
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .featured {
+        .featured-header {
+            margin: 0 auto;
+            font-size: 1.5em;
+        }
+
+        .features {
+            .feature {
+                .feature-info {
+                    h3 {
+                        box-shadow: none;
+                    }
+
                     p {
                         margin: 0 auto 1em;
                     }
