--- a/scss/resume.scss
+++ b/scss/resume.scss
@@ -1,226 +1,315 @@
+/***************************
+        SASS VARIABLES
+***************************/
+$primary-color-dark: #455A64;
+$primary-color: #607D8B;
+$primary-color-light: #CFD8DC;
+$primary-color-text: #FFFFFF;
+$accent-color: #03A9F4;
+$primary-text-color: #212121;
+$secondary-text-color: #727272;
+$divider-color: #B6B6B6;
+
 body,
 div,
-ul,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
 li,
 p,
+ul {
+    margin: 0;
+    padding: 0;
+    font: normal normal normal 14px/21px "Roboto", sans-serif;
+    color: $primary-text-color;
+}
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  padding:0;
-  margin:0;
-  font-family: "Roboto", sans-serif;
-}
-
-.clear-fix {
-  overflow: auto;
-}
-
-.education-entry,
-.work-entry,
-.project-entry {
-  padding: 0 5%;
-}
-
-h1 {
-  font-size: 40px;
-  color: #f5a623;
-  line-height: 48px;
-  display: inline;
+    font-variant: small-caps;
 }
 
 h2 {
-  font-weight: bold;
-  font-size: 24px;
-  color: #999;
-  line-height: 29px;
-  padding: 10px;
+    color: $accent-color;
 }
 
-h3 {
-  font-style: italic;
-  font-size: 20px;
-  color: #000;
-  line-height: 22px;
+h2.accent-bg {
+    color: $primary-color-text;
 }
 
-h4 {
-  font-weight: bold;
-  font-size: 14px;
-  color: #4a4a4a;
-  line-height: 17px;
+.clear-fix {
+    overflow: auto;
 }
 
-h2,
-h3,
-h4,
-h5 {
-  padding:10px 5%;
-
+.primary-bg {
+    background-color: $primary-color;
 }
 
-
-.date-text {
-  font-style: italic;
-  font-size: 14px;
-  color: #999;
-  line-height: 16px;
-  float: left;
+.primary-bg-text {
+    color: $primary_color_text;
 }
 
-.location-text {
-  font-style: italic;
-  font-size: 14px;
-  color: #999;
-  line-height: 16px;
-  float: right;
-
+.light-bg {
+    background-color: $primary-color-light;
 }
 
-p {
-  font-size: 14px;
-  color: #333;
-  line-height: 21px;
+.dark-bg {
+    background-color: $primary-color-dark;
 }
 
-a {
-  color: #1199c3;
-  text-decoration: none;
-  margin-top: 10px;
-  display: block;
+.accent-bg {
+    background-color: $accent-color;
 }
 
-.welcome-message {
-  font-style: italic;
-  font-size: 18px;
-  color: #f3f3f3;
-  line-height: 28px;
+.text-secondary {
+    color: $secondary-text-color;
 }
 
-#skills-h3 {
-  color: #f5ae23;
-  display: none;
-}
-
-.orange {
-  background-color: #f5ae23;
-}
-
-.orange-text {
-  color: #f5ae23;
-}
-
-.white-text {
-  font-weight: bold;
-  color: #fff;
-}
-
-.gray {
-  background-color: #f3f3f3;
-  padding-bottom: 10px;
-  clear:both;
-}
-
-.dark-gray {
-  background-color: #4a4a4a;
-}
-
-/* TODO: Replace with image later */
-#header {
-  background-color: #484848;
+.accent-text {
+    font-variant: small-caps;
+    color: $accent-color;
 }
 
 .flex-box {
-  display: -webkit-flex;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  padding: 10px;
+    display: -webkit-flex;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 10px;
 }
 
 .center-content {
-  padding: 2.5% 5%;
+    padding: 2.5% 5%;
+}
+#header {
+    li,
+    p {
+        color: $primary-color-text;
+    }
+    #header-top {
+        padding: 1% 5% 0;
+    }
+
+    #header-main {
+        padding: 0 5% 2.5%;
+    }
+}
+#skills-h3 {
+    color: $accent-color;
+}
+
+#footerContacts {
+    background-color: $primary-color-dark;
+}
+
+#footerContacts,
+#topContacts {
+    .accent-text {
+        font-size: 1.25em;
+    }
+}
+
+.work-entry {
+    margin: 1em;
+    margin-bottom: 2em;
+    padding: 1em;
+    h3,
+    h4,
+    p {
+        font-variant: normal;
+        color: $primary-text-color;
+    }
+
+    .date-text,
+    .location-text {
+        font-style: italic;
+        font-size: 16px;
+        line-height: 18px;
+    }
+
+    h3,
+    .employer {
+        float: left;
+    }
+
+    h4 {
+        color: $secondary-text-color;
+        font-weight: normal;
+        padding: 5px 0 0 0;
+        margin: 0;
+    }
+    p {
+        text-align: justify;
+        padding: 0 1em;
+        margin-top: -1em;
+    }
+    .date-text,
+    .location-text {
+        float: right;
+    }
+}
+
+.section {
+    border-bottom: 1px solid $divider-color;
+}
+
+.education-entry,
+.project-entry,
+.work-entry {
+    padding: 0 5%;
+}
+
+h1 {
+    font-size: 40px;
+    color: $accent-color;
+    line-height: 48px;
+    display: inline;
+}
+
+h2 {
+    font-size: 30px;
+    line-height: 29px;
+    padding: 10px 5%;
+}
+
+h3 {
+    font-style: italic;
+    font-size: 22px;
+    line-height: 22px;
+}
+
+h4 {
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 17px;
+}
+
+a {
+    color: #1199c3;
+    text-decoration: none;
+    margin-top: 10px;
+    display: block;
+}
+
+.welcome-message {
+    font-style: italic;
+    font-size: 18px;
+    color: #b5b5b7;
+    line-height: 28px;
 }
 
 ul {
-  list-style-type: none;
+    list-style-type: none;
 }
 
 .biopic {
-  float: left;
-  padding: 10px;
-  width: 200px;
-  display: none;
+    float: left;
+    padding: 10px;
+    width: 200px;
+    display: none;
 }
 
 img {
-  padding: 10px;
+    padding: 10px;
 }
 
 span {
-  padding: 5px;
+    padding: 5px;
 }
 
 #lets-connect {
-  text-align: center;
+    text-align: center;
 }
 
 #online-courses {
     display: flex;
-    flex-wrap: wrap;
-    .codeschool-course {
-        text-align: center;
-        flex: 1;
-        height: 100px;
-        img {
-            height: 100px;
+    -moz-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    padding-bottom: 1em;
+    .online-course {
+        margin: 0 auto;
+        color: $accent-color;
+    }
+    #codeschool-courses {
+        display: flex;
+        -moz-flex-direction: row;
+        -webkit-flex-direction: row;
+        flex-direction: row;
+        -moz-flex-wrap: wrap;
+        -webkit-flex-wrap: wrap;
+        flex-wrap: wrap;
+        margin: 0 5%;
+        .codeschool-course {
+            background-color: #fff;
+            padding: 5px;
+            border-radius: 1px;
+            box-shadow: 0 1px 3px #000;
+            margin: 5px;
+            text-align: center;
+            flex: 1;
+            max-height: 150px;
+            min-width: 150px;
+            .codeschool-title {
+                margin: 5px;
+                max-height: 30px;
+            }
+            img {
+                padding: 0;
+                max-height: 100px;
+            }
         }
     }
 }
-/* Media queries to handle various device widths */
 
+/* Media queries to handle various device widths */
 @media only screen and (max-width: 1024px) {
-  #lets-connect {
-    margin-top: 5%;
-  }
+    #lets-connect {
+        margin-top: 5%;
+    }
 }
 
 @media only screen and (max-width:900px) {
-  .biopic {
-    width: 175px;
-  }
+    .biopic {
+        width: 175px;
+    }
 }
 
 @media only screen and (max-width: 750px) {
-  #lets-connect {
-    margin-top: 10%;
-  }
-  .biopic {
-    width: 150px;
-  }
-  .welcome-message {
-    display: none;
-  }
+    #lets-connect {
+        margin-top: 10%;
+    }
+    .biopic {
+        width: 150px;
+    }
+    .welcome-message {
+        display: none;
+    }
 }
 
 #map {
-  display: block;
-  height: 100%;
-  margin: 0 5%;
+    display: block;
+    height: 100%;
+    margin: 0 5%;
 }
 
 #mapDiv {
-  height: 400px;
-  width: 100%;
-  padding-bottom: 5%;
+    height: 400px;
+    width: 100%;
+    padding-bottom: 5%;
 }
 
 @media only screen and (min-width: 750px) {
-  #skills-h3,
-  .biopic {
-    display: block;
-  }
+    #skills-h3,
+    .biopic {
+        display: block;
+    }
 }
