--- a/css/resume.css
+++ b/css/resume.css
@@ -17,12 +17,7 @@ ul {
   font: normal normal normal 14px/21px "Roboto", sans-serif;
   color: #212121; }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1 {
   font-variant: small-caps; }
 
 h2 {
@@ -78,7 +73,8 @@ h2.accent-bg {
   padding: 0 5% 2.5%; }
 
 #skills-h3 {
-  color: #03A9F4; }
+  color: #03A9F4;
+  font-variant: small-caps; }
 
 #footerContacts {
   background-color: #455A64; }
@@ -211,6 +207,16 @@ span {
         padding: 0;
         max-height: 100px; }
 
+#map {
+  display: block;
+  height: 100%;
+  margin: 0 5%; }
+
+#mapDiv {
+  height: 400px;
+  width: 100%;
+  padding-bottom: 5%; }
+
 /* Media queries to handle various device widths */
 @media only screen and (max-width: 1024px) {
   #lets-connect {
@@ -227,16 +233,6 @@ span {
     width: 150px; }
   .welcome-message {
     display: none; } }
-
-#map {
-  display: block;
-  height: 100%;
-  margin: 0 5%; }
-
-#mapDiv {
-  height: 400px;
-  width: 100%;
-  padding-bottom: 5%; }
 
 @media only screen and (min-width: 750px) {
   #skills-h3,
