--- a/scss/resume.scss
+++ b/scss/resume.scss
@@ -27,12 +27,7 @@ ul {
     color: $primary-text-color;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1 {
     font-variant: small-caps;
 }
 
@@ -104,6 +99,7 @@ h2.accent-bg {
 }
 #skills-h3 {
     color: $accent-color;
+    font-variant: small-caps;
 }
 
 #footerContacts {
@@ -270,6 +266,18 @@ span {
     }
 }
 
+#map {
+    display: block;
+    height: 100%;
+    margin: 0 5%;
+}
+
+#mapDiv {
+    height: 400px;
+    width: 100%;
+    padding-bottom: 5%;
+}
+
 /* Media queries to handle various device widths */
 @media only screen and (max-width: 1024px) {
     #lets-connect {
@@ -293,18 +301,6 @@ span {
     .welcome-message {
         display: none;
     }
-}
-
-#map {
-    display: block;
-    height: 100%;
-    margin: 0 5%;
-}
-
-#mapDiv {
-    height: 400px;
-    width: 100%;
-    padding-bottom: 5%;
 }
 
 @media only screen and (min-width: 750px) {
