--- a/css/resume.css
+++ b/css/resume.css
@@ -18,10 +18,27 @@ ul {
   color: #212121; }
 
 h1 {
-  font-variant: small-caps; }
+  font-variant: small-caps;
+  font-size: 40px;
+  color: #03A9F4;
+  line-height: 48px;
+  display: inline; }
 
 h2 {
-  color: #03A9F4; }
+  color: #03A9F4;
+  font-size: 30px;
+  line-height: 29px;
+  padding: 10px 5%; }
+
+h3 {
+  font-style: italic;
+  font-size: 22px;
+  line-height: 22px; }
+
+h4 {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 17px; }
 
 h2.accent-bg {
   color: #FFFFFF; }
@@ -120,27 +137,6 @@ h2.accent-bg {
 .project-entry,
 .work-entry {
   padding: 0 5%; }
-
-h1 {
-  font-size: 40px;
-  color: #03A9F4;
-  line-height: 48px;
-  display: inline; }
-
-h2 {
-  font-size: 30px;
-  line-height: 29px;
-  padding: 10px 5%; }
-
-h3 {
-  font-style: italic;
-  font-size: 22px;
-  line-height: 22px; }
-
-h4 {
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 17px; }
 
 a {
   color: #1199c3;
