--- a/scss/resume.scss
+++ b/scss/resume.scss
@@ -226,8 +226,7 @@ span {
     flex-direction: column;
     padding-bottom: 1em;
     .online-course {
-        margin: 0 auto;
-        color: $accent-color;
+        padding: 1% 5%;
     }
     #codeschool-courses {
         display: flex;
