--- a/resume/styles/resume.scss
+++ b/resume/styles/resume.scss
@@ -103,6 +103,29 @@ h2.accent-bg {
 .center-content {
     padding: 2.5% 5%;
 }
+
+.section {
+    border-bottom: 1px solid $divider-color;
+}
+
+.pan-left,
+.pan-right {
+    display: none;
+    position: absolute;
+    overflow:hidden;
+    height: 100%;
+    top: 0;
+    background-color: $primary-color-dark;
+}
+
+.pan-left {
+    left: 0;
+}
+
+.pan-right {
+    right: 0;
+}
+
 #header {
     li,
     p {
@@ -111,7 +134,6 @@ h2.accent-bg {
     #header-top {
         padding: 1% 5% 0;
     }
-
     #header-main {
         padding: 0 5% 2.5%;
     }
@@ -136,10 +158,10 @@ h2.accent-bg {
     margin: 1em;
     margin-bottom: 2em;
     padding: 1em;
+
     h3,
     h4,
     p {
-        font-variant: normal;
         color: $primary-text-color;
     }
 
@@ -172,21 +194,16 @@ h2.accent-bg {
     }
 }
 
-.section {
-    border-bottom: 1px solid $divider-color;
-}
-
 .education-entry,
 .project-entry,
-.work-entry {
+.work-entry,
+.online-course {
     padding: 0 5%;
 }
 
 a {
-    color: #1199c3;
+    color: $accent-color;
     text-decoration: none;
-    margin-top: 10px;
-    display: block;
 }
 
 .welcome-message {
@@ -225,19 +242,25 @@ span {
     -webkit-flex-direction: column;
     flex-direction: column;
     padding-bottom: 1em;
+    margin-top: 2em;
+    .section {
+        margin: 0 5%;
+    }
     .online-course {
         padding: 1% 5%;
     }
-    #codeschool-courses {
+    .onlineschool-courses {
+        position: relative;
         display: flex;
         -moz-flex-direction: row;
         -webkit-flex-direction: row;
         flex-direction: row;
-        -moz-flex-wrap: wrap;
-        -webkit-flex-wrap: wrap;
-        flex-wrap: wrap;
-        margin: 0 5%;
-        .codeschool-course {
+        // -moz-flex-wrap: wrap;
+        // -webkit-flex-wrap: wrap;
+        // flex-wrap: wrap;
+        overflow-x: scroll;
+        margin: 0 7.5%;
+        .onlineschool-course {
             background-color: #fff;
             padding: 5px;
             border-radius: 1px;
@@ -245,11 +268,15 @@ span {
             margin: 5px;
             text-align: center;
             flex: 1;
-            max-height: 150px;
+            max-height: 175px;
             min-width: 150px;
-            .codeschool-title {
+            .onlineschool-title {
                 margin: 5px;
                 max-height: 30px;
+            }
+            a {
+                margin-top: 10px;
+                display: block;
             }
             img {
                 padding: 0;
